# iot-predictive-maintenance

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
deploy/: demo.py  lambda_app.py
deploy/web/: demo.html  template.html
scripts/: _awsclock.py  run_bench.py  run_cost.py  run_e2e.py  run_influxdb.py  run_replay.py  run_server.py
src/fleet_health/: __init__.py  asset_types.py  bedrock_models.py  bench.py  cost_model.py  detector.py  features.py  generator.py  health.py  historian.py  inference.py  metrics.py  model.py  replay.py  rul.py  serving.py  state_store.py
tests/: test_cost_model.py  test_detector.py  test_features.py  test_generator.py  test_health.py  test_historian.py  test_replay.py  test_rul.py  test_serving.py  test_state_store.py
